White space bug fix

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
   text-align: center;
   width: 100%;
   height: 100vh;
+  overflow: hidden;
 }
 
 video {
